--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@sanity/vision": "^3.68.3",
     "next": "14.2.18",
     "next-sanity": "^9.8.30",
+    "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.4.0",
     "sanity": "^3.68.3",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "sweetalert2": "^11.15.3"
   },
   "devDependencies": {
     "@types/node": "^20",
